--- a/fonts.css
+++ b/fonts.css
@@ -24,3 +24,12 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'BeauSans';
+  src: url('./fonts/BeauSans.woff2') format('woff2'),
+       url('./fonts/BeauSans.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
