--- a/fonts.css
+++ b/fonts.css
@@ -26,9 +26,9 @@
 }
 
 @font-face {
-  font-family: 'SkippySharpiCiel';
-  src: url('./fonts/SkippySharpiCiel.woff2') format('woff2'),
-       url('./fonts/SkippySharpiCiel.woff') format('woff');
+  font-family: 'Sriracha';
+  src: url('./fonts/Sriracha.woff2') format('woff2'),
+       url('./fonts/Sriracha.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
